<resources>
    <string name="app_name">DocsHub</string>
    <string name="search_bar">Search</string>
    <string name="uploadNewDocument">Upload New Document</string>
    <string name="add_document">Add Document</string>
    <string name="go_all_in">GO ALL IN SECURE WITH DOCSHUB</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account_then">Already have an account, then</string>
    <string name="if_you_are_new_to_docsHub_then">If you are new to DocsHub, then</string>
    <string name="welcome_to_docshub">Welcome to DocsHub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="send_document">Send Document</string>
    <string name="folder">Folder</string>
    <string name="select_file_text">Select File</string>
    <string name="select_file_button_text">Select File</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="upload_button">Upload File</string>
    <string name="upload_file_button">Upload File</string>
</resources>