<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomePage">

    <Button
        android:id="@+id/SearchBar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/search_bar"
        android:backgroundTintMode="screen"
        android:hapticFeedbackEnabled="true"
        android:includeFontPadding="true"
        android:text="@string/search_bar"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:iconPadding="8dp"
        app:iconSize="24dp"
        app:iconTint="#FFFFFF"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />

    <View
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="@color/search_bar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/folder_grey"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchBar"
        app:layout_constraintVertical_bias="0.998"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/send_document"
            android:visibility="visible"
            app:srcCompat="@drawable/topicblue_48" />

        <ImageButton
            android:id="@+id/addDocument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/add_document"
            android:fadingEdge="horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:scaleType="center"
            app:srcCompat="@drawable/addblue_75" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/folder"
            android:visibility="visible"
            app:srcCompat="@drawable/folderblue_48" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>