<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:tintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/loginbg"
        app:tint="@color/tint_color" />

    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/welcome_to_docshub"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_background_image"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/username_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/username"
        android:includeFontPadding="true"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#6DFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/password_textView"
        app:layout_constraintEnd_toEndOf="@+id/login_background_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="208dp"
        android:hint="@string/password"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:paddingVertical="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#6DFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/facebook_blue"
        android:shadowColor="#000000"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />


</androidx.constraintlayout.widget.ConstraintLayout>